--- a/src/app/rwa01/rwa01.page.html
+++ b/src/app/rwa01/rwa01.page.html
@@ -24,7 +24,22 @@
           กรุณาระบุ Password
         </span>
       </ion-item>
-
+      <ion-item>
+        <ion-label class="showlabel" position="floating">การลงเวลา</ion-label>
+        <ionic-selectable interface="floating" formControlName="check_type" itemValueField="id"itemTextField="type" [items]="ports_checktype" [canSearch]="true" closeButtonText="ยกเลิก"  (onChange)="portChange($event)">
+        </ionic-selectable>
+        <span  class="error" *ngIf="isSubmitted && errorControl.check_type.errors?.required">
+          กรุณาระบุ การลงเวลา
+        </span>
+      </ion-item>
+     <ion-item *ngIf="this.ionicForm.controls.check_type.value.id === '1'">
+      <ion-label class="showlabel" position="floating">สังกัดที่ช่วย</ion-label>
+        <ionic-selectable interface="floating" formControlName="dept" itemValueField="dept_id"itemTextField="dept_name" [items]="ports_dept" [canSearch]="true" closeButtonText="ยกเลิก" >
+        </ionic-selectable>
+        <span  class="error" *ngIf="isSubmitted && errorControl.dept.errors?.required">
+          กรุณาระบุ สังกัดที่ช่วย
+        </span>
+     </ion-item>
       <ion-row>
         <ion-col>
           <ion-button type="submit" color="danger" expand="block">เข้าสู่ระบบ</ion-button>
@@ -38,25 +53,8 @@
         <ion-col>ipAddress: {{ipAddress}}</ion-col>
         <ion-col>ip1: {{vdevice}}</ion-col>
       </ion-row> -->
-      <!--  -->
     </form>
     <div *ngIf="emp_name != null">
-      <!-- <ion-list>
-        <ion-item>
-          <ion-avatar slot="start">
-            <img src={{img}}>
-          </ion-avatar>
-          <ion-label>
-            <h2>{{emp_name}}</h2>
-            <h3>{{dept_name}}</h3>
-            <h3 *ngFor="let c of datagps">
-              พิกัดสำนักงาน {{c.lat}} , {{c.lon}}
-            </h3>
-            <h3 *ngIf="!datagps"> พิกัดสำนักงาน ไม่พบพิกัดในระบบ</h3>
-            <h3>พิกัดปัจจุบัน {{vlat}} , {{vlon}} <ion-button>ดึงพิกัดใหม่</ion-button></h3>
-          </ion-label>
-        </ion-item>
-      </ion-list> -->
       <ion-grid >
         <ion-row>
           <ion-col>
@@ -81,15 +79,41 @@
         </ion-row>
         <ion-row>
           <ion-col>
-            <ion-label>พิกัดปัจจุบัน {{vlat}} , {{vlon}} <ion-button>ดึงพิกัดใหม่</ion-button></ion-label>
+            <ion-label>พิกัดปัจจุบัน {{vlat}} , {{vlon}} <ion-button (click)="GetGPS()">ดึงพิกัดใหม่</ion-button></ion-label>
           </ion-col>
         </ion-row>
+        <ion-row>
+          <ion-col>ระยะทาง {{vkm}}  km.</ion-col>
+        </ion-row>
       </ion-grid>
+
+      <div *ngIf="vkm <= 0.600">
+        <ion-grid>
+         <ion-row>
+           <ion-col><ion-label>บันทึกเข้าเวลา :</ion-label></ion-col>
+           <ion-col>{{timein}}</ion-col>
+         </ion-row>
+         <ion-row>
+          <ion-col><ion-label>บันทึกออกเวลา :</ion-label></ion-col>
+          <ion-col>{{timeout}}</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col><ion-button (click)="Checkinout(1)">ลงเวลาเข้าทำงาน</ion-button></ion-col>
+          <ion-col><ion-button (click)="Checkinout(2)">ลงเวลาออกทำงาน</ion-button></ion-col>
+        </ion-row>
+        </ion-grid>
+      </div>
+      <div *ngIf="vkm > 0.600">
+        <ion-label>ไม่สามารถลงเวลาได้ เนื่องจากระยะทางเกิน 200 ม.</ion-label>
+      </div>
+      <div *ngIf = "!datagps">
+          <ion-label>ไม่สามารถลงเวลาได้ เนื่องจากไม่พบพิกัด สำนักงาน</ion-label>
+      </div>
     </div>
-    <!-- <ion-row  class="appversion">
+    <ion-row  class="appversion">
       <ion-col>
-          App Version : {{versionNumber}}
+        <ion-label> App Version : {{versionNumber}} </ion-label>
       </ion-col>
-    </ion-row> -->
+    </ion-row>
   </div>
 </ion-content>
