--- a/src/app/rwa01/rwa01.page.scss
+++ b/src/app/rwa01/rwa01.page.scss
@@ -3,8 +3,58 @@
 //   max-height: 525px;
 // }
 
-
 ion-img {
   width: 100px;
   height: 100px;
+}
+
+.main{
+  margin: 5px;
+  border: 3px ridge  #f7bba3;
+  padding-left: 10px;
+  padding-right: 10px;
+
+}
+
+.sign{
+  color: #1bee14;
+  font-size: 20px;
+  position : relative;
+  text-align : center
+}
+
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
+  height: 10%;
+}
+
+.formmain{
+  margin: 35px;
+  //margin: 5px;
+  border: 3px ridge  #f7e0a3;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.formsub{
+  margin: 35px;
+  border: 3px ridge  #daf7a3;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.appversion{
+  color: #d2e1fa;
+  display: flex;
+  margin: auto;
+}
+
+.error{
+  color: #ff0000;
+  display:table;
+  margin-left: auto;
+  margin-right: auto;
 }
