--- a/src/app/rwa01/rwa01.page.scss
+++ b/src/app/rwa01/rwa01.page.scss
@@ -31,6 +31,36 @@ ion-img {
   height: 10%;
 }
 
+.manual{
+  color: #ee14d1;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -20px;
+  margin-bottom: 3px;
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+}
+
+.manual1{
+  color: #f57c0a;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -20px;
+  margin-bottom: 3px;
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+}
+
 .formmain{
   margin: 35px;
   //margin: 5px;
@@ -42,6 +72,7 @@ ion-img {
 .formsub{
   margin: 35px;
   border: 3px ridge  #daf7a3;
+  margin-top: 20px;
   padding-left: 10px;
   padding-right: 10px;
 }
